--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flipkart-shopping",
+  "name": "MY_PORT",
   "version": "1.0.0",
   "description": "www.freepix.com",
   "main": "index.js",
